# Flask_server

./: StoreChampAverages.py  main.py  pyproject.toml  riot-api-key.env  riot.txt
ChampGG/: Aatrox.json  Ahri.json  Akali.json  Alistar.json  Amumu.json  Anivia.json  Annie.json  Aphelios.json  Ashe.json  AurelionSol.json  Azir.json  Bard.json  Blitzcrank.json  Brand.json  Braum.json  Caitlyn.json  Camille.json  Cassiopeia.json  Chogath.json  Corki.json  Darius.json  Diana.json  DrMundo.json  Draven.json  Ekko.json  Elise.json  Evelynn.json  Ezreal.json  Fiddlesticks.json  Fiora.json  Fizz.json  Galio.json  Gangplank.json  Garen.json  Gnar.json  Gragas.json  Graves.json  Hecarim.json  Heimerdinger.json  Illaoi.json  (+115 more)
Player_Info/: ankchi.json  drivinmao.json  hunter1216.json  juicel4.json  kevqi.json  leviathan0313.json  lostpotato27.json  shivonmyniv.json  weeee12345.json
