[tool.poetry]
name = "sanicserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apscheduler = "^3.7.0"
nest-asyncio = "^1.5.1"
pantheon = "^1.2.1"
riotwatcher = "^3.1.1"
sanic = "^20.12.2"
selenium = "^3.141.0"
webdriver-manager = "^3.3.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
